fix poster size on main page on small screen

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -28,12 +28,14 @@ img {
 .afficheWrapper {
     margin: auto;
     display: flex;
-    justify-content: space-between;
+    justify-content: center; /*space-between;*/
 }
 
+/*
 .afficheWrapper img {
     width: 48%;
 }
+*/
 
 .videoWrapper {
     overflow: hidden;
@@ -53,4 +55,10 @@ img {
     left: 0;
     width: 100%;
     height: 100%;
+}
+
+@media (min-width: 992px) {
+    .affiche {
+        width: 50%;
+    }
 }
